--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "3.0.0",
-  "name": "gatsby-starter-lumen",
-  "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
+  "name": "dpundir-com",
+  "description": "Personal blog of Dinkar Pundir",
   "main": "n/a",
   "scripts": {
     "develop": "yarn run clean && gatsby develop",
@@ -15,26 +15,18 @@
     "test:coverage": "jest --coverage --config ./tests/jest-config.js",
     "test:watch": "jest --watch --config ./tests/jest-config.js"
   },
-  "repository": "https://github.com/alxshelepenok/gatsby-starter-lumen",
-  "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
+  "repository": "https://github.com/dinkar/dpundir.com",
+  "author": "Dinkar Pundir <dinkarpundir@gmail.com>",
   "license": "MIT",
   "keywords": [
-    "gatsby",
-    "graphql",
-    "netlify",
-    "netlify-cms",
-    "pagination",
-    "categories",
-    "tags",
-    "prismjs",
-    "static",
-    "lost",
+    "dinkar",
+    "pundir",
     "blog",
     "minimal",
     "react",
-    "theme",
-    "starter",
-    "disqus"
+    "engineering",
+    "frontend",
+    "fullstack"
   ],
   "dependencies": {
     "classnames": "^2.2.6",
